[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/objects/Sign/Sign.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/sign.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[node name="Sign" type="Area2D"]
scale = Vector2( 10, 10 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="TextLabel" type="Label" parent="."]
margin_left = -72.0
margin_top = -30.0
margin_right = 216.0
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "a really long text"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Sign_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sign_body_exited"]
